--- a/openshift/README.adoc
+++ b/openshift/README.adoc
@@ -28,24 +28,22 @@ nodes:
 
 ==== Install OKD
 
-WARNING: right now, there is an error in the DNS with the DNS-setup, which has been reported multiple times but not fixed yet.
+WARNING: right now, there is an error in the DNS-setup, which has been reported multiple times but not fixed yet.
 Once you see this message `TASK [openshift_service_catalog : Verify that the catalog api server is running]`
-the task will probably stall after some network activity. In this case run 'ansible-playbook -i openshift-inventory fix.yml' which will workaround the DNS issue
+the task will probably stall after some network activity. In this case run `ansible-playbook -i openshift-inventory fix.yml` which will workaround the DNS issue
 for service-resolution within the cluster. After a couple seconds, the installer should continue.
 
 
+Run `install.sh` which will create the environment and run the https://github.com/openshift/openshift-ansible[openshift-ansible installer]
 
-Run `openshift/install.sh` which will create the environment and run the https://github.com/openshift/openshift-ansible[openshift-ansible installer]
-
-[source,sh]
+[source,bash]
 ----
-include::openshift/install.sh[]
+include::install.sh[]
 ----
-
-NOTE: the installer is always in flux, hence a at least known to work tag will be checked out.
-
 
 ==== Use OKD
 
 * Run `vagrant up` from the openshift-folder (if the cluster is not already running)
 * Access https://openshift.vnet.de:8443
+* `vagrant halt` stops the cluster
+* `vagrant destroy -f` deletes the cluster
